# CaptionX

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  biome.json  electron-builder.yml  electron.vite.config.ts  index.html  knip.json  lefthook.yml  package-lock.json  package.json  tsconfig.node.json  tsconfig.web.json  vite.config.ts  vitest.config.ts
.cargo/: config.toml
.github/: FUNDING.yml
.github/workflows/: auto-tag.yml  ci.yml  release.yml
assets/: README.md  generate-icons.ps1
assets/logo/: logo.af
docs/: README.en-us.md  README.en.md  README.ja-jp.md  README.ja.md  README.zh-hans.md  README.zh-hant.md  README.zh.md
resources/: gtcrn_offline.onnx
scripts/: download-models.ps1  patch-whisper-rpath.mjs  setup-build-env.ps1  setup-gpu-sdk.ps1
shared/: types.ts
src/: App.tsx  api.ts  languages.ts  main.tsx  progress.ts  styles.css  tracks.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: whisper_smoke.rs
src-tauri/src/: download.rs  lib.rs  main.rs  state.rs  types.rs
src-tauri/src/align/: ctc.rs  mod.rs  vocab.rs
src-tauri/src/asr/: whisper.rs
src-tauri/src/audio/: decode.rs  denoise.rs  mod.rs
src-tauri/src/commands/: audio.rs  export.rs  hardware.rs  history.rs  mod.rs  models.rs  transcribe.rs  update.rs
src-tauri/src/edit/: mod.rs
src-tauri/src/export/: mod.rs
src-tauri/src/history/: mod.rs
src-tauri/tests/: pipeline.rs  smoke.rs
src-tauri/tests/fixtures/: gtcrn_oracle.json
src/components/: AudioWaveform.tsx  DropZone.tsx  HotwordEditor.tsx  InfoTooltip.tsx  LanguageDropdown.tsx  LocaleToggle.tsx  MediaPlayer.test.ts  MediaPlayer.tsx  ProgressBar.tsx  QueueList.tsx  ResplitBar.tsx  SettingsModal.tsx  TrackMonitor.tsx  TranscriptView.tsx  UpdateButton.tsx
src/hooks/: useBatch.ts  useClickOutside.ts  useHistory.ts  useHotwords.test.ts  useMediaSync.ts  usePersistentState.ts  useResourceEstimator.ts  useUpdater.ts
src/i18n/: format.ts  index.tsx  translations.ts
src/main/: cancellation.test.ts  cancellation.ts  index.ts  ipc.test.ts  ipc.ts  media-protocol.test.ts  media-protocol.ts  pipeline.test.ts  pipeline.ts  resources.test.ts  resources.ts  systemInfo.ts  updater.ts
src/main/align/: aligner.test.ts  aligner.ts  feature.test.ts  feature.ts  model-loader.ts  romanize.ts  tokenizer.test.ts  tokenizer.ts  viterbi.test.ts  viterbi.ts  vocab.test.ts  vocab.ts  wav2vec2.ts
src/main/asr/: whisper.test.ts  whisper.ts
src/main/audio/: decode.test.ts  decode.ts  enhance.test.ts  enhance.ts  preview.test.ts  preview.ts  (+4 more)
src/preload/: index.d.ts  index.ts
src/renderer/: index.html
(+42 files in other folders)
